# HMN-2025-Spring-course

./: .gitignore  .gitmodules  README.md  hello.py  myst.yml  pyproject.toml
assignments/: 0-introduction-chat.md  1-first-poster-proposal.md  2-poster-proposal-#1.md  assignment_schema.md  index.md  outro-goodbye-chat-prompt.md
bot/: hmn25-server-config.yaml  hmn25-srping-server-config.yaml  prompts.md
code/: eatYouTube.js  fetchYoutubeTranscript_w_timer.js
code/old/: package.json
code/python-code/: playlist_data.yaml  playlist_transcripts.md  pull_youtube_playlist_info.py  pyproject.toml
code/python-code/lecture_transcript_processing/: pull_youtube_playlist_info.py
code_dump/old/: fetchYoutubeTranscript_w_timer.js  package-lock.json
code_dump/python-code/eye_tracking_analysis/: combined_pupil_analyzer.py  eye_data_analysis.ipynb  pupil_data_viewer.py
code_dump/python-code/lecture_transcript_processing/: ai_cleanup_lecture_data.py  ai_outline_lecture_data.py  pull_youtube_playlist_info.py  youtube_playlist_main.py
docs/: index.md
exercises/: index.md
lectures/: 2025-01-06-intro-lecture.md  2025-03-26-evolution-lecture.md  __index.md  eyeballs-vision-lecture-notes.md
lectures/2025-01-15-HMN-overview/: 2023-01-15-ai-summary.json  2025-01-15-HMN-overview.md
lectures/2025-01-15-HMN-overview/ai-output/: README.md  transcript-digest_ytid-F4FNNmuAq74.html  transcript-digest_ytid-F4FNNmuAq74.json
lectures/2025-01-27-Into-to-Measurement/: 2025-01-27-Intro-to-Measurement.md  Winter anthropometry.md
(+128 files in other folders)
